--- a/sampleapp/build.gradle
+++ b/sampleapp/build.gradle
@@ -1,13 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion "$BUILD_TOOLS_VERSION"
+    compileSdkVersion 27
 
     defaultConfig {
         applicationId "com.bignerdranch.expandablerecyclerviewsample"
-        minSdkVersion 9
-        targetSdkVersion 24
+        minSdkVersion 19
+        targetSdkVersion 27
         versionCode 1
         versionName "3.0"
     }
@@ -23,9 +22,9 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile project(':expandablerecyclerview')
-    compile "com.android.support:recyclerview-v7:$SUPPORT_VERSION"
-    compile "com.android.support:appcompat-v7:$SUPPORT_VERSION"
-    compile "com.android.support:support-annotations:$SUPPORT_VERSION"
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation project(':expandablerecyclerview')
+    implementation "com.android.support:recyclerview-v7:27.1.1"
+    implementation "com.android.support:appcompat-v7:27.1.1"
+    implementation "com.android.support:support-annotations:27.1.1"
 }
